--- a/index.html
+++ b/index.html
@@ -167,6 +167,20 @@
                         </div>
                     </div>
                 </div>
+                 <div class="skill-progress">
+                    <div class="sixty-percent mb-teal">
+                        <div class="skill-name">
+                            <span> React </span>
+                        </div>
+                    </div>
+                </div>
+                 <div class="skill-progress">
+                    <div class="fifty-percent mb-teal">
+                        <div class="skill-name">
+                            <span> Java </span>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
